--- a/biography.html
+++ b/biography.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="okH/1vHmdJPFlOdK+xJwWbBQEX5roPwtYNrUES51J/Om5ak+SH3p8FEMequPCK6elOBHqmL8I22566WiznrOnsBZ50mo/hoWZzHPwwW/tkO3GJJvF7got+/fw95hpUHe" data-form-email="true">
+                        <input type="hidden" value="7HL8XBK4R7m9DOOXNc5drollWpMHuwWvvtIqtCRAfi7YqqX+oc7FNIwyXcM/nQ1pOU78/1hpNL3W2yXJniGuiTdsu7rOQkIceruB8cwZ1L4Y3+2ZMN1hXj0uBkjNZQc6" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -208,7 +208,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="LgJFZtSEabQNGu0EDnBQ85e9L3JvNVXmz96Zx4VOATddYnt06r3380CMqrHJZ6IWwGJYO9RCSOlnKAwQZRJqVpwo7MZ+9yLM37QQWnce6CviAqos3AIl4ZD8wmasXtlK" data-form-email="true">
+                    <input type="hidden" value="qGQoSF5aLpMDAd5rUL4U7qaxUqS+TIrM8DcBegDjDuQpPxBDHxzEHXniSiVdFI0I+dxnkAgYD7i24alWKKwjvXH/Hvt4QgaKFWa71PD822cBN8UidooeJWZ1TUkVjVDm" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
