--- a/photoshop.html
+++ b/photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -466,9 +466,9 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img alt="" src="assets/images/buster3-website-2000x20008.jpg">
+                            <img alt="" src="assets/images/buster3-website-2000x20000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/buster-4-website-2000x20009.jpg">
+                            <img alt="" src="assets/images/buster-4-website-2000x20001.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/rainbow-connection-website-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -486,7 +486,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/julian-guas-perspective-imagery-website-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x200010.jpg">
+                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x20002.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/bengal-tiger-website-1-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -908,7 +908,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="VvwTXU3fDJRd/AqtcvHdek1LOiRvbC17hG3ceuWojaJ9X5Wuh9CmusIBvTg5TkRjkBGjbyg31xNdzCJkZEy/ka1CvutudK3Nj4dxLuHUTP+w4TWj/uP3PlJCBd220e34" data-form-email="true">
+                    <input type="hidden" value="NJJYfjnClpDLW0p0QtDOYWk+CaoR9y1OksU2Mr5qbJ3Ez9FBwDuME122YnLX9T9aTGBleuX6MD09Wf3K3h10G4ypAEO1124e8SOfY3ryPzKpDFPbfF6t4QVVmxKBKLGP" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
