--- a/photoshop.html
+++ b/photoshop.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="biography.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">APPLICATIONS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Creative Suite</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="illustrator.html">Adobe Illustrator</a><a class="dropdown-item" href="photoshop.html" aria-expanded="false">Adobe Photoshop</a><a class="dropdown-item" href="premiere.html">Adobe Premiere</a><a class="dropdown-item" href="animate.html">Adobe Animate&nbsp;</a><a class="dropdown-item" href="dreamweaver.html">Adobe Dreamweaver&nbsp;</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Microsoft Office</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="word.html">Microsoft Word</a></div></div><a class="dropdown-item" href="123d.html">123D</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">CREDENTIALS</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="#" aria-expanded="true" data-toggle="dropdown-submenu">Credentials</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="julianguas.github.io/documents/Ai Certification.pdf" target="_blank">Adobe Illustrator</a></div></div><a class="dropdown-item" href="#">Resume<br></a><a class="dropdown-item" href="#">SAT</a><a class="dropdown-item" href="#">ACT</a></div></li><li class="nav-item"><a class="nav-link link" href="reference.html" aria-expanded="false">REFERENCE</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="biography.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">APPLICATIONS</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="true">Creative Suite</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="illustrator.html">Adobe Illustrator</a><a class="dropdown-item" href="photoshop.html" aria-expanded="false">Adobe Photoshop</a><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="premiere.html" data-toggle="dropdown-submenu" aria-expanded="true">Adobe Premiere</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="#">Imagine Dragons Competition</a></div></div><a class="dropdown-item" href="animate.html">Adobe Animate&nbsp;</a><a class="dropdown-item" href="dreamweaver.html">Adobe Dreamweaver&nbsp;</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Microsoft Office</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="word.html">Microsoft Word</a></div></div><a class="dropdown-item" href="123d.html">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">CREDENTIALS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Credentials</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="julianguas.github.io/documents/Ai Certification.pdf" target="_blank">Adobe Illustrator</a></div></div><a class="dropdown-item" href="#">Resume<br></a><a class="dropdown-item" href="#">SAT</a><a class="dropdown-item" href="#">ACT</a></div></li><li class="nav-item"><a class="nav-link link" href="reference.html" aria-expanded="false">REFERENCE</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -466,9 +466,9 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img alt="" src="assets/images/buster3-website-2000x20004.jpg">
+                            <img alt="" src="assets/images/buster3-website-2000x20000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/buster-4-website-2000x20005.jpg">
+                            <img alt="" src="assets/images/buster-4-website-2000x20001.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/rainbow-connection-website-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -486,7 +486,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/julian-guas-perspective-imagery-website-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x20006.jpg">
+                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x20002.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/bengal-tiger-website-1-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -908,7 +908,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="sA1lXIySsQEKaBoY2SWB2duNaLwOblhRdtLF2i8GDGkEkaT6dz48MKdShT5D9TSLS0ECxkdQCF2m9BZiyNA0T4yChL2br+lBudsmvXJySVsgz1/OiGcrsyDAlAb1tDzJ" data-form-email="true">
+                    <input type="hidden" value="qzyfRemdMF0nv3fmEWYwCx2GGMdZIIxeKVY6p4BcgAYZzo0YGYbK53hEs+j7086SZs8T4DgLCV0OeSf21LiB6m80iZbAKX0ttlgFqLNkUeiI+KfBUqg9OAsLXIoHYDM1" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
